Tue Apr  3 11:51:02 2001  Owen Taylor  <otaylor@redhat.com>

	* {glib,gobject}/Makefile.am (sgml-build.stamp): Add
	explicit path to tmpl files in dependencies.

	* glib/glib.types gobject/gobject.types: empty files
	to keep generic makefiles happy.

2001-04-03  Sebastian Wilhelmi  <wilhelmi@ira.uka.de>

	* glib/glib-sections.txt: Removed
	g_static_private_(get|set)_for_thread.

	* glib/tmpl/threads.sgml: Updated.

	* glib/tmpl/thread_pools.sgml: Added GThreadPool documentation.

Mon Mar 26 14:20:36 2001  Owen Taylor  <otaylor@redhat.com>

	* glib/Makefile.am (SCAN_OPTIONS): Add --deprecated-guards

Sat Mar 17 17:51:17 2001  Owen Taylor  <otaylor@redhat.com>

	* gobject/Makefile.am glib/Makefile.am: A couple
	of small fixes.

2001-03-08  Sebastian Wilhelmi  <wilhelmi@ira.uka.de>

	* glib/tmpl/threads.sgml: Spelling corrections.

Wed Mar  7 15:02:17 2001  Owen Taylor  <otaylor@redhat.com>

	* gobject/Makefile.am: Revert Tim's last commit to
	get rid of 7+ unnecessary / broken changes. Add
	back the useful part. Also fix problem with grep,
	add dependency on template files.

	* gobject/gobject-sections.txt: Remove double 
	value_types names which was screwing up builds.

	* glib/Makefile.am: Propagate changes from 
	gobject/Makefile.am

2001-03-07  Sebastian Wilhelmi  <wilhelmi@ira.uka.de>

	* glib/tmpl/threads.sgml: Fixed stupid typo.

2001-03-07  Sebastian Wilhelmi  <wilhelmi@ira.uka.de>

	* glib/tmpl/threads.sgml: Completed.

Wed Mar  7 09:33:27 2001  Tim Janik  <timj@gtk.org>

	* gobject/Makefile.am: shuffled rules to avoid excessive
	rebuilds.

	* gobject/gobject-sections.txt: updates.

	* gobject/tmpl/*: bunch of updates, added another patch
	from Eric Lemings <eric.b.lemings@lmco.com>.

2001-03-07  Sebastian Wilhelmi  <wilhelmi@ira.uka.de>

	* glib/glib-sections.txt, glib/tmpl/messages.sgml: Removed
	g_log_domain_gmodule.

2001-02-23  Sebastian Wilhelmi  <wilhelmi@ira.uka.de>

	* glib/tmpl/threads.sgml: Big update. Almost ready.
